omni/tests/goldens/types/unknown_type_11.err
tests/goldens/types/unknown_type_11.omni:1:1: error: type mismatch: cannot assign int to Mystery11
     1 | let value11:Mystery11 = 1
       | ^^^^^^^^^^^^^^^^^^^^^^^^^
     2 | 
  hint: convert the expression to Mystery11 or change the variable type to int
