omni/tests/goldens/types/unknown_type_11.omni
let value11:Mystery11 = 1
